Change author name in index.html
Updated author name in the meta tag.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A simple CV webpage for a Junior Frontend Developer.">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Kacper">
     <meta name="keywords" content="CV, Resume, Frontend Developer, HTML, CSS, JavaScript">
 
 
@@ -71,3 +71,4 @@
 
 
 </html>
+
